# Dark-Silence

./: .claudeignore  AGENTS.md  CLAUDE.md  Cargo.toml  project-instructions.md
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: sddp-adr-author.md  sddp-api-designer.md  sddp-checklist-reader.md  sddp-configuration-auditor.md  sddp-context-gatherer.md  sddp-database-administrator.md  sddp-developer.md  sddp-policy-auditor.md  sddp-qc-auditor.md  sddp-requirements-scanner.md  sddp-spec-validator.md  sddp-story-verifier.md  sddp-task-tracker.md  sddp-technical-researcher.md  sddp-test-evaluator.md  sddp-test-planner.md  sddp-wbs-generator.md
.claude/rules/: sddp-adrs.md  sddp-bootstrap.md  sddp-governance.md  sddp-specs.md  sddp.md
.claude/skills/sddp-amend/: SKILL.md
.claude/skills/sddp-analyze/: SKILL.md
.claude/skills/sddp-autopilot/: SKILL.md
.claude/skills/sddp-checklist/: SKILL.md
.claude/skills/sddp-clarify/: SKILL.md
.claude/skills/sddp-devops/: SKILL.md
.claude/skills/sddp-devsetup/: SKILL.md
.claude/skills/sddp-implement/: SKILL.md
.claude/skills/sddp-implement-qc-loop/: SKILL.md
.claude/skills/sddp-init/: SKILL.md
.claude/skills/sddp-plan/: SKILL.md
.claude/skills/sddp-prd/: SKILL.md
.claude/skills/sddp-projectplan/: SKILL.md
.claude/skills/sddp-qc/: SKILL.md
.claude/skills/sddp-specify/: SKILL.md
.claude/skills/sddp-systemdesign/: SKILL.md
.claude/skills/sddp-tasks/: SKILL.md
.github/: sddp-config.md
.github/agents/: _adr-author.md  _adversarial-scanner.md  _api-designer.md  _checklist-reader.md  _configuration-auditor.md  _context-gatherer.md  _database-administrator.md  _developer.md  _policy-auditor.md  _qc-auditor.md  _requirements-scanner.md  _spec-validator.md  _story-verifier.md  _task-tracker.md  _technical-researcher.md  _test-evaluator.md  _test-planner.md  _wbs-generator.md
.github/instructions/: sddp-adrs.instructions.md  sddp-bootstrap.instructions.md  sddp-governance.instructions.md  sddp-specs.instructions.md
.github/skills/adr-authoring/: SKILL.md
.github/skills/amend-project/: SKILL.md
.github/workflows/: ci.yml
assets/content/: CONTENT.md  editor_layout.ron  modules.ron  render_tuning.ron  scenario.ron  ships.ron
assets/fonts/: README.md
assets/shaders/: hull_extension.wgsl  starfield.wgsl
crates/client/: Cargo.toml
crates/client/src/: camera.rs  command_mode.rs  dev_panel.rs  fonts.rs  hud.rs  hud_bars.rs  hull_shader.rs  hull_textures.rs  input.rs  interpolation.rs  lib.rs  main.rs  module_bars.rs  net.rs  particles.rs  perf_hud.rs  prediction.rs  radar.rs  render_sync.rs  scene.rs  ship_visuals.rs  starfield.rs  tuning_io.rs
crates/client/src/fitting_ui/: mod.rs
crates/client/src/hull_editor/: mod.rs  preview.rs
crates/client/tests/: interpolation.rs  prediction.rs  reconciliation.rs  snapshot_order.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: delta.rs  lib.rs  loopback.rs  messages.rs  quantize.rs  renet_adapter.rs  transport.rs
crates/protocol/tests/: isolation.rs  quantize.rs  renet_udp.rs  roundtrip.rs  secure_connect.rs
crates/server/: Cargo.toml
crates/server/benches/: encode.rs
crates/server/examples/: fleet_stress.rs
crates/server/src/: lib.rs  main.rs  scenario.rs  session.rs  snapshot.rs  validation.rs
crates/server/tests/: bandwidth.rs  capacity_mtu.rs  demo_enemies_smoke.rs  determinism.rs  dos_guard.rs  equivalence.rs  faction_balance.rs  harness.rs  rates.rs  session.rs  skirmish_behaviors.rs  skirmish_flythrough.rs  skirmish_physics.rs  validation.rs  validation_parity.rs
crates/server/tests/botkit/: mod.rs
crates/sim/: Cargo.toml
crates/sim/src/: ai.rs  broadphase.rs  clock.rs  collision.rs  combat.rs  components.rs  energy.rs  flight.rs  intent.rs  lib.rs  mining.rs  motion.rs  physics.rs  scenario.rs  tuning.rs  turret.rs  voxelize.rs  weapon.rs
crates/sim/src/ai/: brain.rs  command.rs  control.rs  disposition.rs  ident.rs  lod.rs  mod.rs  perception.rs  role.rs  squad.rs  steering.rs  strategy.rs  tuning.rs
crates/sim/src/damage/: content.rs  destruction.rs  event.rs  layers.rs  mod.rs  penetration.rs  resist.rs  salvage.rs  seed.rs  sever.rs  shields.rs
crates/sim/src/fitting/: content.rs  fit.rs  hull.rs  layout.rs  materials.rs  mod.rs  module.rs  stats.rs  validate.rs
crates/sim/tests/: ai.rs  damage.rs  fitting.rs  gameplay.rs  physics_swap.rs
docs/: game-design.md
specs/: prd.md  project-plan.md  sad.md
specs/00001-workspace-sim-core/: .completed  .qc-passed  plan.md  qc-report.md  spec.md  tasks.md
specs/00002-single-player-flight-combat/: .completed  .qc-passed  analysis-report.md  data-model.md  manual-test.md  plan.md  qc-report.md  research.md  spec.md  tasks.md
specs/00003-authoritative-networking/: .completed  .qc-passed  analysis-report.md  bandwidth-baseline.md  manual-test.md  plan.md  qc-report.md  research.md  spec.md  tasks.md
specs/00004-persistence-layer/: research.md  spec.md
specs/00006-ship-fitting-modules/: .completed  .qc-passed  data-model.md  manual-test.md  plan.md  qc-report.md  research.md  spec.md  tasks.md
specs/00007-damage-destruction/: .completed  .qc-passed  data-model.md  manual-test.md  plan.md  qc-report.md  research.md  spec.md  tasks.md
specs/00008-ship-ai/: .completed  .qc-passed  analysis-report.md  bench-gate.json  data-model.md  plan.md  qc-report.md  research.md  spec.md  tasks.md
specs/adrs/: 0001-tiered-simulation-architecture.md  0002-server-authoritative-netcode.md  0003-shared-sim-crate-and-fixed-step-integration.md  0004-2d-physics-behind-trait.md  0005-single-node-first-build-the-seams.md  0006-interest-management-and-bandwidth-scaling.md  0007-technology-stack-and-workspace.md  0008-unified-domain-data-model.md  0009-cyberwarfare.md  0010-research-manufacturing-property-pipeline.md  0011-automation-floor-human-ceiling.md  0012-physically-grounded-gameplay-scaled.md  0013-thin-client-fixed-step-interpolated-rendering.md  0014-netcode-transport-renet-own-netcode.md  0015-ship-ai-utility-state-machine-hierarchical-lod.md
(+63 files in other folders)
