[workspace]
resolver = "2"
members = ["crates/sim", "crates/client"]

# Shared, version-pinned dependencies. Crates opt in via `dep.workspace = true`.
# Heavy deps (bevy, lightyear, sqlx, redis, tokio, bitcode, tracing)
# are added here as their owning crates come online per the phased roadmap.
[workspace.dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# Pure ECS only: default-features = false keeps Bevy's render/window/app stack
# out of the headless `sim` crate (TR-002 / HINT-004).
bevy_ecs = { version = "0.18", default-features = false }
# 2D physics engine, kept behind the `sim::physics::Physics` trait (TR-006).
rapier2d = { version = "0.32" }
# Full Bevy (render/window/input) for the client shell only (ADR-0013). Pinned
# to the same minor as `bevy_ecs` above so a single `bevy_ecs` version resolves
# (HINT-004 — a second version fails to build).
bevy = { version = "0.18" }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

# Tighter release profile; the sim is CPU-bound at scale.
[profile.release]
lto = "thin"
codegen-units = 1
