[workspace]
resolver = "2"
members = ["crates/sim", "crates/client", "crates/protocol", "crates/server"]

# Shared, version-pinned dependencies. Crates opt in via `dep.workspace = true`.
# Heavy deps (bevy, lightyear, sqlx, redis, tokio, bitcode, tracing)
# are added here as their owning crates come online per the phased roadmap.
[workspace.dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# RON content files for ships/modules (Phase C). Pure (de)serialization — no IO; the
# `sim` crate parses embedded/loaded strings, the `server` does the file reads.
ron = { version = "0.8" }
# Pure ECS only: default-features = false keeps Bevy's render/window/app stack
# out of the headless `sim` crate (TR-002 / HINT-004).
bevy_ecs = { version = "0.18", default-features = false }
# 2D physics engine, kept behind the `sim::physics::Physics` trait (TR-006).
rapier2d = { version = "0.32" }
# Full Bevy (render/window/input) for the client shell only (ADR-0013). Pinned
# to the same minor as `bevy_ecs` above so a single `bevy_ecs` version resolves
# (HINT-004 — a second version fails to build).
bevy = { version = "0.18" }
# Snapshot wire encoding: bit-packed, quantized (ADR-0007, TR-013).
bitcode = { version = "0.6" }
# Transport-level UDP netcode (ADR-0014). renet supplies only the transport;
# prediction/reconciliation/interpolation/snapshots are game-owned in `sim` +
# `protocol`. Confined behind `protocol::NetTransport` / the `renet_adapter`
# module so no renet type leaks into the public surface (HINT-002, SC-006).
renet = { version = "2" }
renet_netcode = { version = "2" }
# NOTE: `bevy_renet` is intentionally OMITTED. Per AD-002 the headless server is
# a synchronous fixed-tick `bevy_ecs` app that polls renet directly each tick;
# it needs no Bevy plugin, which also avoids coupling renet to Bevy 0.18's app
# layer. Add it only if a future epic moves netcode into a Bevy plugin.

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

# Tighter release profile; the sim is CPU-bound at scale.
[profile.release]
lto = "thin"
codegen-units = 1
