[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Thin Bevy render/input/HUD shell over the shared `sim` crate (ADR-0013).
# No gameplay logic lives here — only input mapping, render-sync, camera, HUD,
# and scene setup. Gameplay state and systems live in `sim`.
[dependencies]
bevy = { workspace = true }
sim = { path = "../sim" }
glam = { workspace = true }

[features]
# Dev-only convenience (AD-005): faster iterative linking. Never enabled in a
# release/CI artifact.
dynamic_linking = ["bevy/dynamic_linking"]
