[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Thin Bevy render/input/HUD shell over the shared `sim` crate (ADR-0013).
# No gameplay logic lives here — only input mapping, render-sync, camera, HUD,
# and scene setup. Gameplay state and systems live in `sim`.
[dependencies]
bevy = { workspace = true }
# Pure ECS, the SAME crate/version `sim` uses (HINT-004 pins the minor to
# `bevy`), so the client's predicted `World`/`Schedule` are the exact types
# `sim::add_fixed_step_systems` expects — prediction steps the shared sim
# bit-identically to the server (AD-005 / HINT-003).
bevy_ecs = { workspace = true }
sim = { path = "../sim" }
protocol = { path = "../protocol" }
# The default loopback solo-play path (T045) embeds an authoritative `ServerApp`
# and steps it each FixedUpdate, so `cargo run -p client` is a runnable
# single-player experience over the in-memory transport (Principle VII). The
# renet transport can be swapped in later behind the same `NetTransport` seam.
server = { path = "../server" }
glam = { workspace = true }
earcutr = "0.5.0"
# R44: egui is now always-on — the EVE-style fitting/inventory screen (`fitting_ui`) uses it, not just
# the (feature-gated) dev panel. `EguiPlugin` is added once in `lib::run()`.
bevy_egui = { version = "0.39.1" }
# Refinement 27: persist the client render tuning (Starfield + HUD) to a hand-editable RON file
# (load at startup + a dev-panel Save button), mirroring the sim content-RON pattern.
serde = { workspace = true }
ron = { workspace = true }

[features]
# Default-ON for the solo windowed client: the live dev tuning panel (Phase M6).
# Compile out the PANEL MODULE with `--no-default-features` (egui itself is now a normal dep — the
# fitting screen uses it always, so it's no longer gated here). The panel only functions on the
# embedded-server solo path.
default = ["dev_panel"]
# The egui-based runtime tuning panel (`crate::dev_panel`). egui (`bevy_egui`) is unconditional now.
dev_panel = []
# Dev-only convenience (AD-005): faster iterative linking. Never enabled in a
# release/CI artifact.
dynamic_linking = ["bevy/dynamic_linking"]

# Integration tests drive the prediction/reconciliation layer headlessly against
# an embedded `server` over the in-memory loopback transport (no window, no
# renet) — proving the netcode logic before the real UDP adapter (HINT-001).
[dev-dependencies]
server = { path = "../server" }
protocol = { path = "../protocol" }
glam = { workspace = true }
