[package]
name = "sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared deterministic simulation crate (Tier 0 integrator + Tier 1 analytic). Client and server both depend on this — it is the single source of gameplay truth."

[dependencies]
glam.workspace = true
