[package]
name = "sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared deterministic simulation crate (Tier 0 integrator + Tier 1 analytic). Client and server both depend on this — it is the single source of gameplay truth."

[features]
# TR-020 / AD-006 (00008-ship-ai): per-brain utility-score + behavior-transition
# capture for the client dev panel. OFF by default — headless server and bench
# builds compile the capture seam OUT entirely (zero cost in the measured
# TR-017 path). Only the windowed client build turns it on.
ai_debug = []

[dependencies]
glam.workspace = true
serde.workspace = true
bevy_ecs.workspace = true
rapier2d.workspace = true
# Parse the embedded/loaded RON content catalogs (Phase C). Pure (de)serialization,
# no filesystem IO — `sim` stays engine-agnostic/deterministic; the `server` reads files.
ron.workspace = true

[dev-dependencies]
# A concrete serde format, used only to exercise the serialize -> deserialize
# round-trip equality test (TR-008). Not a runtime dependency of `sim`.
serde_json = "1.0"
